--- a/contact.html
+++ b/contact.html
@@ -36,12 +36,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="topbar">
 <div class="container">
 <div class="row"> 
-<div class="bar-phone">
-<i class="fa fa-phone"></i> <span>Call Us :</span> <strong>+1-310-341-3870</strong>
-</div>
-<div class="bar-mail">
-<i class="fa fa-envelope"></i> <span>Mail Us :</span> <strong>info@charityhope.com</strong>
-</div>
+	<div class="bar-phone">
+		<i class="fa fa-phone"></i> <span>Call Us :</span> <strong>+91 9444069888</strong>
+		</div>
+		<div class="bar-mail">
+		<i class="fa fa-envelope"></i> <span>Mail Us :</span> <strong>amarumugam2000@gmail.com</strong>
+		</div>
 <div class="header-social">
 <a class="facebook" href="#" title="facebook" target="_blank" rel="nofollow"><i class="fa fa-facebook"></i>  </a>
 <a class="twitter" href="#" title="twitter" target="_blank" rel="nofollow"><i class="fa fa-twitter"></i>  </a>
@@ -67,12 +67,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </div>
 <div class="collapse navbar-collapse" id="navbar-menu">
 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
-<li><a href="index.html">Home</a></li>
-<li><a href="about-us.html">About Us</a></li>
-<li><a href="activities.html">Activities</a></li>
-<li><a href="projects.html">Projects</a></li>
-<li><a href="gallery.html">Gallery</a></li>
-<li><a href="contact.html">Contact Us</a></li>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="about-us.html">About Us</a></li>
+	<li><a href="activities.html">What we Do</a></li>
+	<li><a href="projects.html">Our Facilities</a></li>
+	<li><a href="gallery.html">Join Us</a></li>
+	<li><a href="contact.html">Contact Us</a></li>
 </ul>
 </div>
 </div>
