--- a/gallery.html
+++ b/gallery.html
@@ -68,12 +68,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </div>
 <div class="collapse navbar-collapse" id="navbar-menu">
 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
-<li><a href="index.html">Home</a></li>
-<li><a href="about-us.html">About Us</a></li>
-<li><a href="activities.html">Activities</a></li>
-<li><a href="projects.html">Projects</a></li>
-<li><a href="gallery.html">Gallery</a></li>
-<li><a href="contact.html">Contact Us</a></li>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="about-us.html">About Us</a></li>
+	<li><a href="activities.html">What we Do</a></li>
+	<li><a href="projects.html">Our Facilities</a></li>
+	<li><a href="gallery.html">Join Us</a></li>
+	<li><a href="contact.html">Contact Us</a></li>
 </ul>
 </div>
 </div>
