--- a/index.html
+++ b/index.html
@@ -98,45 +98,46 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="item active slide1" >
 					
                         <h2 data-animation="animated bounceInDown"><span>MINI-AUDITORIUM</span></h2>
-                        <h3 data-animation="animated bounceInDown">There is that smaller world which is the stage, and that larger stage which is the world!</h3>
+                        <h3 data-animation="animated bounceInDown"><b><i>There is that smaller world which is the stage, and that larger stage which is the world!</i></b></h3>
                         <h4 data-animation="animated bounceInUp"><a href="about-us.html">READ MORE</a></h4>             
              </div> 
             <!-- Item 2 -->
             <div class="item slide2">
                         <h2 data-animation="animated bounceInDown"><span>INSTRUMENTAL ROOM</span></h2>
-                        <h3 data-animation="animated bounceInDown">Let the music speaks! Life is like a song</h3>
+                        <h3 data-animation="animated bounceInDown"><b><i>Let the music speaks! Life is like a song!</i></b></h3>
                         <h4 data-animation="animated bounceInUp"><a href="about-us.html">READ MORE</a></h4>             
              </div>
             <!-- Item 3 -->
             <div class="item slide3">
                         <h2 data-animation="animated bounceInDown"><span>Play Ground</span></h2>
-                        <h3 data-animation="animated bounceInDown">You can discover more about a person in an hour of play than in a year of conversation.</h3>
+                        <h3 data-animation="animated bounceInDown"><b><i>You can discover more about a person in an hour of play than in a year of conversation!</i></b></h3>
                         <h4 data-animation="animated bounceInUp"><a href="about-us.html">READ MORE</a></h4>             
              </div>
             <!-- Item 4 -->
             <div class="item slide4">
                         <h2 data-animation="animated bounceInDown"><span>LIBRARY</span></h2>
-                        <h3 data-animation="animated bounceInDown">A child who reads will be an adult who thinks</h3>
+                        <h3 data-animation="animated bounceInDown"><b><i>A child who reads will be an adult who thinks!</i></b></h3>
                         <h4 data-animation="animated bounceInUp"><a href="about-us.html">READ MORE</a></h4>             
              </div>
 			 <div class="item slide5">
 				<h2 data-animation="animated bounceInDown"><span>Children's Gym</span></h2>
-				<h3 data-animation="animated bounceInDown">"Build a strong mindset, the body will follow.</h3>
+				<h3 data-animation="animated bounceInDown"><b><i>"Build a strong mindset, the body will follow!"</i></b></h3>
 				<h4 data-animation="animated bounceInUp"><a href="about-us.html">READ MORE</a></h4>             
 	 		</div>
 	 		<div class="item slide6">
-		<h2 data-animation="animated bounceInDown"><span>Raise your funds for a cause</span></h2>
-		<h3 data-animation="animated bounceInDown">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.!</h3>
+		<h2 data-animation="animated bounceInDown"><span>Science Lab</span></h2>
+		<h3 data-animation="animated bounceInDown"><b><i>Think like a proton
+			Always Positive!</i></b></h3>
 		<h4 data-animation="animated bounceInUp"><a href="about-us.html">READ MORE</a></h4>             
 </div>
 <div class="item slide7">
-	<h2 data-animation="animated bounceInDown"><span>Raise your funds for a cause</span></h2>
-	<h3 data-animation="animated bounceInDown">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.!</h3>
+	<h2 data-animation="animated bounceInDown"><span>Outdoor Games</span></h2>
+	<h3 data-animation="animated bounceInDown"><b><i>Just play.Have fun.Enjoy the Game!</i></b></h3>
 	<h4 data-animation="animated bounceInUp"><a href="about-us.html">READ MORE</a></h4>             
 </div>
 	<div class="item slide8">
-	<h2 data-animation="animated bounceInDown"><span>Raise your funds for a cause</span></h2>
-	<h3 data-animation="animated bounceInDown">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.!</h3>
+	<h2 data-animation="animated bounceInDown"><span>CHESS ROOM</span></h2>
+	<h3 data-animation="animated bounceInDown"><b><i>When you see a good move, look for a better one!</i></b></h3>
 	<h4 data-animation="animated bounceInUp"><a href="about-us.html">READ MORE</a></h4>             
 	</div>
             <!-- End Item 4 -->
